# fast-walker

./: Cargo.toml  Readme.md
projects/fast-walker/: Cargo.toml  readme.md
projects/fast-walker/src/: lib.rs  utils.rs
projects/fast-walker/src/config/: mod.rs
projects/fast-walker/src/dir_walker/: config.rs  iterators.rs  mod.rs
projects/fast-walker/src/dir_walker/queue/: mod.rs
projects/fast-walker/src/dir_walker/rev_iter/: mod.rs
projects/fast-walker/src/dir_walker/sync_iter/: mod.rs  result.rs  task.rs
projects/fast-walker/src/dir_walker/tokio_iter/: mod.rs
projects/fast-walker/src/errors/: display.rs  mod.rs
projects/fast-walker/src/item/: convert.rs  mod.rs
projects/fast-walker/tests/: main.rs
