[package]
name = "fast-walker"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Multi-threaded directory walker, with async support"
repository = "https://github.com/oovm/fast-walker"
documentation = "https://docs.rs/fast-walker"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.26.0", optional = true }

[dev-dependencies]

[features]
default = []
